# crosslink-by-sequence

./: .gitignore  Makefile  README.md  crosslink_by_sequence_singularity.def  setup.cfg  setup.py  t.sh  xlink_proteomes_metaphors.py
crosslink-by-sequence-env/: pyvenv.cfg
crosslink_by_sequence/: __main__.py  argument_parser.py  crosslink_by_sequence.py  diamond_operations.py  setup.cfg  utils.py
scripts/: install-with-fresh-env.sh
