[metadata]
name = crosslink_by_sequence
version = 1.0.0
description = A tool to crosslink proteins between two proteomes from different sources using their sequences, aiming to avoid the inaccuracies associated with source-specific IDs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabaldonlab/crosslink_by_sequence
author = Dániel Májer
author_email = majerdaniel93@gmail.com
license = GPL-3.0 license
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GPL-3.0 license
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    tokenize-rt>=5.2.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    crosslink-by-sequence = crosslink_by_sequence:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false